Fixed up spot check assignment, squashed reordering bug

--- a/coreui/css/oxygen-icons/icons.css
+++ b/coreui/css/oxygen-icons/icons.css
@@ -46,7 +46,7 @@
 
 .script
 {
-    background-image:url(images/text-x-python.png);
+    background-image:url(images/application-x-php.png);
 }
 
 .new
